# nf4ad

./: .gitignore  LICENSE  README.md  eval.py  eval_img_reconstruction_with_feat_encoder.py  pyproject.toml  pytest.ini  sample.npy  visualization.py
deepsvdd/: requirements.txt
deepsvdd/log/cifar10_test/: config.json  log.txt  (+1 more)
deepsvdd/src/: main.py
examples/: adbench_benchmark_example.py  adbench_flow_example.py
experiments/MVTec/: mvtec_fixed_encoder.yaml  mvtec_fixed_encoder_small.yaml  mvtec_trainable_encoder.yaml  mvtec_trainable_encoder_nonus.yaml  mvtec_trainable_encoder_us.yaml
experiments/cifar-10/: deepsvdd-cifar-10.yaml
experiments/fashion/: deepsvdd-fashion.yaml  fashion.yaml
experiments/gmm/: gaussian_mixture_standart_base.yaml
experiments/mnist/: deepsvdd-mnist.yaml  mnist.yaml  mnist_3.yaml  mnist_3_ablation.yaml  mnist_3_ablation_v0.yaml  mnist_3_eval.yaml  mnist_3_feature_flow.yaml  mnist_3_latent_flow.yaml  mnist_eval.yaml  mnist_eval_feature_extractor.yaml  mnist_train_feature_extractor.yaml  mnist_vaeflow.yaml
experiments/synthetic/: gaussian_mixture_non_usflow.yaml
notebooks/: gmm_eval.ipynb
scripts/: deepsvdd-run-experiment.py  gmm_eval_usflows.py  run-eval-feat-encoder.py  run-evaluation.py  run-experiment.py
src/: adbench_experiment.ipynb
src/nf4ad/: ad_bench_vaeflow.py  adbench_benchmark.py  adbench_wrapper.py  eval.py  feature_encoder.py  flows.py  hyperopt.py  transforms.py  vaeflow.py
tests/: README.md  __init__.py  conftest.py  test_adbench_flow_wrapper.py  test_adbench_wrapper.py  test_flows.py  test_vaeflow.py
(+15 files in other folders)
